/*
 * Copyright 2020 Arthur Sadykov.
 *
 * Тестовое задание Haulmont.
 * Cистема ввода и отображения информации о рецептах поликлиники.
 */
CREATE SCHEMA IF NOT EXISTS polyclinic;

CREATE TABLE IF NOT EXISTS patient (
    patient_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    first_name VARCHAR(255) NOT NULL,
    last_name VARCHAR(255) NOT NULL,
    patronymic VARCHAR(255),
    phone_number VARCHAR(255) NOT NULL
);

CREATE TABLE IF NOT EXISTS doctor (
    doctor_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    first_name VARCHAR(255) NOT NULL,
    last_name VARCHAR(255) NOT NULL,
    patronymic VARCHAR(255),
    specialization VARCHAR(255) NOT NULL
);

CREATE TABLE IF NOT EXISTS recipe (
    recipe_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    description VARCHAR(255),
    patient_id BIGINT NOT NULL,
    doctor_id BIGINT NOT NULL,
    creation_date DATE NOT NULL,
    validity_period INTEGER NOT NULL,
    priority INTEGER NOT NULL, 
    FOREIGN KEY (patient_id) 
    REFERENCES patient (patient_id) 
        ON DELETE RESTRICT 
        ON UPDATE CASCADE,
    FOREIGN KEY (doctor_id) 
    REFERENCES doctor (doctor_id) 
        ON DELETE RESTRICT 
        ON UPDATE CASCADE
);